--- a/public/index.css
+++ b/public/index.css
@@ -2,4 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: #fff;
+}
+
+body {
+    min-height: 100vh;
+    background: #111;
+}
+
+#root {
+    height: 100vh;
 }
