--- a/public/index.css
+++ b/public/index.css
@@ -13,3 +13,22 @@ body {
 #root {
     height: 100vh;
 }
+
+svg * {
+    color: #05f !important;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    background: #333;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #555;
+    border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #454545;
+}
